--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
     <div class="date-selectors">
 
       <div class="current-year">
-        <button class="btn-c" name="previousyear" onclick="previousyear()"><i class="fas fa-sort-down"></i></button>
+        <button class="btn-c" name="previousyear" onclick="previousyear()"><i class="fas fa-caret-left"></i></button>
         <p id="year"></p>
-        <button class="btn-c" name="nextyear" onclick="nextyear()"><i class="fas fa-sort-up"></i></button>
+        <button class="btn-c" name="nextyear" onclick="nextyear()"><i class="fas fa-caret-right"></i></button>
       </div>
 
       <div class="current-month">
-        <button class="btn-c" name="previousmonth" onclick="previousmonth()"><i class="fas fa-sort-down"></i></button>
+        <button class="btn-c" name="previousmonth" onclick="previousmonth()"><i class="fas fa-caret-left"></i></button>
         <p id="month"></p>
-        <button class="btn-c" name="nextmonth" type="button" onclick="nextmonth()"><i class="fas fa-sort-up"></i></button>
+        <button class="btn-c" name="nextmonth" type="button" onclick="nextmonth()"><i class="fas fa-caret-right"></i></button>
       </div>
       <div class="luk-mig" id="closeCalDiv">
         <i class="fas fa-times"></i>
