--- a/styleguide/navigation.html
+++ b/styleguide/navigation.html
@@ -17,6 +17,7 @@
 <li><a href="headings.html"><p>Headings</p></a></li>
 <li><a href="buttons.html"><p>Buttons</p></a></li>
 <li><a href="icons.html"><p>Icons</p></a></li>
+<li><a href="colors.html"><p>Colors</p></a></li>
 </ul>
 
 </header>
