--- a/styleguide/colors.html
+++ b/styleguide/colors.html
@@ -24,8 +24,36 @@
 
 <main>
   <div class="">
-    <h1>This is the online styleguide for <span class="archi">trend</span>log.io maintenance planner </h1>
+    <h1>This is the colors for trendlogs<span class="archi">trend</span>log.io maintenance planner </h1>
   </div>
+  <table>
+    <tr>
+      <th>info</th>
+      <th>display</th>
+      <th>HTML</th>
+    </tr>
+    <tr>
+      <td><p>balck:<br>This is the man black color that is used for the text and black accents</p></td>
+      <td>#</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td><p>trendlog grøn:</p></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td><p>Light Blue:<br></p></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td><p></p></td>
+      <td></td>
+      <td></td>
+    </tr>
+
+  </table>
 </main>
 
 
