tilføjet styleguide ting
flere ikoner, knapper og farver

--- a/styleguide/buttons.html
+++ b/styleguide/buttons.html
@@ -70,6 +70,48 @@
                       </td>
                   </tr>
 
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Label</p>
+                        To toggle different tasks in the report
+
+                      </td>
+                      <td class="t-a-center">
+                       <p><input id="task3" type="checkbox" class="task"></p>
+                      </td>
+                      <td class="t-a-center">
+                        <p> &lt;label for=&quot;task3&quot;&gt;Clean interior&lt;/label&gt; </p>
+                      </td>
+                  </tr>
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Done button</p>
+                        When done with report checklist
+
+                      </td>
+                      <td class="t-a-center">
+                       <p><button data-modal-target="#modal" type="button">Done</button></p>
+                      </td>
+                      <td class="t-a-center">
+                        <p> Needs code </p>
+                      </td>
+                  </tr>
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Close button</p>
+                        When closing pop-ups.
+
+                      </td>
+                      <td class="t-a-center">
+                       <p><i class="fas fa-times"></i></p>
+                      </td>
+                      <td class="t-a-center">
+                        <p> &lt;i class=&quot;fas fa-times&quot;&gt;&lt;/i&gt; </p>
+                      </td>
+                  </tr>
+
 
               </tbody>
           </table>
