--- a/styleguide/colors.html
+++ b/styleguide/colors.html
@@ -28,6 +28,167 @@
   </div>
 </main>
 
+<table class='icons-g' cellpadding="10" cellspacing='0' border="1">
+            <thead>
+                <tr>
+                    <th width="40" class="left">
+                        <strong>where to use</strong>
+                    </th>
+                    <th width="30" class="center">
+                        <strong>Color</strong>
+                    </th>
+                    <th width="30" class="center">
+                        <strong>how to get it</strong>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="t.a.left">
+                      <p>Used for navigation bar and headers.</p>
+
+                    </td>
+                    <td class="t-a-center">
+                     <div class="colour1">
+
+                     </div>
+                    </td>
+                    <td class="t-a-center">
+                    background-color: #333;
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="t.a.left">
+                      <p>Used for alternating list items and calendar dates.</p>
+
+                    </td>
+                    <td class="t-a-center">
+                     <div class="colour2">
+
+                     </div>
+                    </td>
+                    <td class="t-a-center">
+                      background:#DCE5EE;
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="t.a.left">
+                      <p>Used for alternating list items.</p>
+
+                    </td>
+                    <td class="t-a-center">
+                     <div class="colour3">
+
+                     </div>
+                    </td>
+                    <td class="t-a-center">
+                      background:#fff;
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="t.a.left">
+                      <p>Used for "Your resources", sorting buttons, search functions and machines that are due in a long time.</p>
+
+                    </td>
+                    <td class="t-a-center">
+                     <div class="colour4">
+
+                     </div>
+                    </td>
+                    <td class="t-a-center">
+                      background:#337AB7;
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="t.a.left">
+                      <p>Used for machined thar are due in one day</p>
+
+                    </td>
+                    <td class="t-a-center">
+                     <div class="colour5">
+
+                     </div>
+                    </td>
+                    <td class="t-a-center">
+                      background:#F0AD4E;
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="t.a.left">
+                      <p>Used for machined thar are due today and various icons and buttons</p>
+
+                    </td>
+                    <td class="t-a-center">
+                     <div class="colour6">
+
+                     </div>
+                    </td>
+                    <td class="t-a-center">
+                      background:#5CB85C;
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="t.a.left">
+                      <p>Used for machined thar are overdue/p>
+
+                    </td>
+                    <td class="t-a-center">
+                     <div class="colour7">
+
+                     </div>
+                    </td>
+                    <td class="t-a-center">
+                      background:#D9534F;
+                    </td>
+                </tr>
+
+
+                <tr>
+                    <td class="t.a.left">
+                      <p>Used when hovering over dates in calendar</p>
+
+                    </td>
+                    <td class="t-a-center">
+                     <div class="colour8">
+
+                     </div>
+                    </td>
+                    <td class="t-a-center">
+                      background:#9ba2bb;
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="t.a.left">
+                      <p>Used for showing the current day in calendar</p>
+
+                    </td>
+                    <td class="t-a-center">
+                     <div class="colour9">
+
+                     </div>
+                    </td>
+                    <td class="t-a-center">
+                      background:#90EE90;
+                    </td>
+                </tr>
+
+
+
+
+
+
+
+
+
+            </tbody>
+        </table>
 
   </body>
 </html>
