--- a/styleguide/icons.html
+++ b/styleguide/icons.html
@@ -99,7 +99,31 @@
                       </td>
                   </tr>
 
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Search</p>
 
+                      </td>
+                      <td class="t-a-center">
+                       <i class="fas fa-search"></i>
+                      </td>
+                      <td class="t-a-center">
+                        <p> &lt;i class=&quot;fas fa-search&quot;&gt;&lt;/i&gt; </p>
+                      </td>
+                  </tr>
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Search</p>
+
+                      </td>
+                      <td class="t-a-center">
+                       <p>&#9650;</p>
+                      </td>
+                      <td class="t-a-center">
+                        <p> &lt;span class=&quot;white&quot;&gt;Type&lt;/span&gt; &amp;#9650;&lt;/th&gt; </p>
+                      </td>
+                  </tr>
               </tbody>
           </table>
 
