--- a/styleguide/buttons.html
+++ b/styleguide/buttons.html
@@ -91,7 +91,7 @@
 
                       </td>
                       <td class="t-a-center">
-                       <p><button data-modal-target="#modal" type="button">Done</button></p>
+                       <button class="btn-g" data-modal-target="#modal" type="button">Done</button></p>
                       </td>
                       <td class="t-a-center">
                         <p> Needs code </p>
