--- a/styleguide/navigation.html
+++ b/styleguide/navigation.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <script src='https://kit.fontawesome.com/f47fcebf42.js' crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styleguide.css">
+    <link rel="stylesheet" href="/css/listoverview.css">
     <meta charset="utf-8">
     <title>Styleguide for Trendlog.io maintenance menu</title>
   </head>
@@ -28,6 +29,94 @@
   </div>
 
 
+  <table class='icons-g' cellpadding="10" cellspacing='0' border="1">
+              <thead>
+                  <tr>
+                      <th width="40" class="left">
+                          <strong>where to use</strong>
+                      </th>
+                      <th width="30" class="center">
+                          <strong>button</strong>
+                      </th>
+                      <th width="30" class="center">
+                          <strong>how to get it</strong>
+                      </th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Use in all navigations as the left most item</p>
+
+                      </td>
+                      <td class="t-a-center">
+                        <div class="pics">
+                      <img src="../media/logo60.png" alt="trendlog.io logo">
+                    </div>
+                      </td>
+                      <td class="t-a-center">
+                      &lt;li&gt;&lt;a href=&quot;styleguide.html&quot;&gt;&lt;img class=&quot;logo&quot; src=&quot;media/logo60.png&quot; alt=&quot;&quot;&gt;&lt;/a&gt;&lt;/li&gt;
+                      </td>
+                  </tr>
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Home button</p> Button to go back to main page.
+
+                      </td>
+                      <td class="t-a-center">
+                      <i class="fas fa-home"></i>
+                      </td>
+                      <td class="t-a-center">
+                       &lt;i class=&quot;fas fa-home&quot;&gt;&lt;/i&gt;
+                      </td>
+                  </tr>
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Label</p>
+                        To toggle different tasks in the report
+
+                      </td>
+                      <td class="t-a-center">
+                       <p><li><a href="#"><p>Trendboard</p></a></li></p>
+                      </td>
+                      <td class="t-a-center">
+                        <p> &lt;label for=&quot;task3&quot;&gt;Clean interior&lt;/label&gt; </p>
+                      </td>
+                  </tr>
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Done button</p>
+                        When done with report checklist
+
+                      </td>
+                      <td class="t-a-center">
+                       <button class="btn-g" data-modal-target="#modal" type="button">Done</button></p>
+                      </td>
+                      <td class="t-a-center">
+                        <p> Needs code </p>
+                      </td>
+                  </tr>
+
+                  <tr>
+                      <td class="t.a.left">
+                        <p>Close button</p>
+                        When closing pop-ups.
+
+                      </td>
+                      <td class="t-a-center">
+                       <p><i class="fas fa-times"></i></p>
+                      </td>
+                      <td class="t-a-center">
+                        <p> &lt;i class=&quot;fas fa-times&quot;&gt;&lt;/i&gt; </p>
+                      </td>
+                  </tr>
+
+
+              </tbody>
+          </table>
 
 
 
